feat: mean tests